View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028562 | Open CASCADE | OCCT:Modeling Algorithms | public | 2017-03-16 16:21 | 2017-09-29 16:25 |
Reporter | emv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028562: Replacement of old Boolean operations (BRepAlgo) with new ones (BRepAlgoAPI) in BRepAlgo_NormalProjection | ||||
Description | The issue is intended to transferring of the BRepAlgo_NormalProjection algorithm from old Boolean operations (BRepAlgo) to new ones (BRepAlgoAPI). | ||||
Steps To Reproduce | Not needed. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28562 has been created by emv. SHA-1: 98b85d2a42b2e5f4de0c5ce55b6be8fa8ba5cff9 Detailed log of new commits: Author: emv Date: Fri Mar 17 11:34:21 2017 +0300 0028562: Replacement of old Boolean operations (BRepAlgo) with new ones (BRepAlgoAPI) in BRepAlgo_NormalProjection The usage of the old Boolean operations (implemented in the class BRepAlgo_BooleanOperations) in the BRepAlgo_NormalProjection algorithm has been replaced with the usage of new Boolean operations (implemented in the class BRepAlgoAPI_BooleanOperations). |
|
Dear Mikhail, could you please review the git branch CR28562? |
|
Reviewed. |
|
Branch CR28562 has been updated forcibly by mkv. SHA-1: d1951a04a1361dfed13423f16f5f621065ad96f3 |
|
Dear BugMaster, Branch CR28562 was rebased on current master of occt git-repository. SHA-1: d1951a04a1361dfed13423f16f5f621065ad96f3 |
|
Dear BugMaster, Branch CR28562 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: d1951a04a1361dfed13423f16f5f621065ad96f3 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1185 Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 92893745 / 92537449 [+0.39%] Total CPU difference: 20192.190000000155 / 20187.16000000011 [+0.02%] products component : Total MEMORY difference: 31034777 / 31146794 [-0.36%] Total CPU difference: 5434.769999999982 / 5412.149999999975 [+0.42%] Testing on Windows: occt component : http://occt-tests/CR28562-master-OCCT/Windows-64-VC10-cpu/diff-Windows-64-VC10-cpu.html CPU bugs moddata_3 bug24886: 4.6644299 / 0.2964019 [+1473.68%] Total MEMORY difference: 57784525 / 57782265 [+0.00%] Total CPU difference: 18813.783000398467 / 18782.551600198512 [+0.17%] products component : Total MEMORY difference: 22292934 / 22254740 [+0.17%] Total CPU difference: 5452.687352899982 / 5421.409152399973 [+0.58%] There are following differences in images found by testdiff. http://occt-tests/CR28562-master-OCCT/Debian70-64/diff-Debian70-64.html http://occt-tests/CR28562-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html IMAGE bugs modalg_2 bug474: bug474.png differs IMAGE bugs modalg_5 bug24012: bug24012.png differs |
|
Dear emv, Branch CR28562 has been rejected due to: - CPU problems - differences in images |
|
1. I do not see any real difference in images for the test case bugs modalg_2 bug474; 2. bugs modalg_5 bug24012 - improvement; 3. The case bugs moddata_3 bug24886 produces absolutely incorrect result in master. Due to performing correct Boolean operation the result produced on the fix is much better. Thus, it should not be considered as CPU regression. Basing on above, please consider the branch TESTED. |
|
Dear BugMaster, Branch CR28562 is TESTED. |
|
Branch CR28562 has been deleted by kgv. SHA-1: d1951a04a1361dfed13423f16f5f621065ad96f3 |
occt: master 8b956afe 2017-03-17 08:34:21 Committer: bugmaster Details Diff |
0028562: Replacement of old Boolean operations (BRepAlgo) with new ones (BRepAlgoAPI) in BRepAlgo_NormalProjection The usage of the old Boolean operations (implemented in the class BRepAlgo_BooleanOperations) in the BRepAlgo_NormalProjection algorithm has been replaced with the usage of new Boolean operations (implemented in the class BRepAlgoAPI_BooleanOperations). |
Affected Issues 0028562 |
|
mod - src/BRepAlgo/BRepAlgo_NormalProjection.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-03-16 16:21 | emv | New Issue | |
2017-03-16 16:21 | emv | Assigned To | => msv |
2017-03-16 16:21 | emv | Assigned To | msv => emv |
2017-03-16 16:21 | emv | Status | new => assigned |
2017-03-16 18:13 | Timo | Relationship added | related to 0027279 |
2017-03-17 13:57 | git | Note Added: 0064394 | |
2017-03-17 13:58 | emv | Note Added: 0064395 | |
2017-03-17 13:58 | emv | Assigned To | emv => msv |
2017-03-17 13:58 | emv | Status | assigned => resolved |
2017-03-17 13:58 | emv | Steps to Reproduce Updated | |
2017-03-17 19:22 | msv | Note Added: 0064417 | |
2017-03-17 19:22 | msv | Assigned To | msv => bugmaster |
2017-03-17 19:22 | msv | Status | resolved => reviewed |
2017-03-17 19:53 | git | Note Added: 0064421 | |
2017-03-17 19:54 |
|
Assigned To | bugmaster => mkv |
2017-03-20 09:47 | emv | Relationship added | related to 0028567 |
2017-03-20 14:50 | emv | Relationship deleted | related to 0028567 |
2017-03-20 14:51 | emv | Relationship added | related to 0028575 |
2017-03-20 20:45 |
|
Note Added: 0064555 | |
2017-03-20 20:45 |
|
Note Added: 0064556 | |
2017-03-20 20:46 |
|
Note Added: 0064557 | |
2017-03-20 20:46 |
|
Assigned To | mkv => emv |
2017-03-20 20:46 |
|
Status | reviewed => feedback |
2017-03-20 20:46 |
|
Test case number | => Not needed |
2017-03-21 16:53 | emv | Note Added: 0064582 | |
2017-03-21 16:53 | emv | Assigned To | emv => apv |
2017-03-21 16:54 | emv | Assigned To | apv => mkv |
2017-03-21 17:02 |
|
Note Added: 0064584 | |
2017-03-21 17:02 |
|
Assigned To | mkv => bugmaster |
2017-03-21 17:02 |
|
Status | feedback => tested |
2017-03-24 15:53 | bugmaster | Changeset attached | => occt master 8b956afe |
2017-03-24 15:53 | bugmaster | Status | tested => verified |
2017-03-24 15:53 | bugmaster | Resolution | open => fixed |
2017-05-12 11:35 | git | Note Added: 0065925 | |
2017-09-29 16:20 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:25 |
|
Status | verified => closed |