0028562: Replacement of old Boolean operations (BRepAlgo) with new ones (BRepAlgoAPI) in BRepAlgo_NormalProjection

The usage of the old Boolean operations (implemented in the class BRepAlgo_BooleanOperations) in the
BRepAlgo_NormalProjection algorithm has been replaced with the usage of new Boolean operations
(implemented in the class BRepAlgoAPI_BooleanOperations).